--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/native": "^6.0.11",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
@@ -20,6 +21,10 @@
     "react": "18.0.0",
     "react-native": "0.69.1",
     "react-native-config": "^1.4.6",
+    "react-native-get-location": "^2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "^1.2.0",
+    "react-native-permissions": "^3.6.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-scalesheet": "^1.0.2",
